# dejetex

./: .gitignore  DejeTex.g4  DejeTexLexer.g4  LICENSE  LICENSE.txt  Makefile  README.md  notes.org  pyproject.toml  requirements.txt
dejetex/: DejeTexVisitor.py  __about__.py  check_env.py  main.py
src/dejetex/: DejeTex.interp  DejeTex.py  DejeTexLexer.interp  DejeTexLexer.py  DejeTexLexer.tokens  DejeTexListener.py  DejeTexVisitor.py  __init__.py  check_env.py  input_pass.py  main.py  parse.py
tests/: generic_test.py  test_define.py  test_env.py  test_input.py  test_int.py  test_mathmode.py  test_newcommand.py  test_program.py  test_sum.py  test_usepackage.py  test_vertical.py
tests/deje-tests/: Vectors_and_Derivatives.deje  begin1.deje  define1.deje  define2.deje  define3.deje  env1.deje  env2.deje  env3.deje  env4.deje  example1.deje  input1.deje  int2.deje  jf100A.deje  macro1.deje  mathmode1.deje  newcommand.deje  newcommand2.deje  program-unsafe.deje  program1.deje  program2.deje  program3.deje  program4.deje  program5.deje  program6.deje  program7.deje  program8.deje  sum1.deje  usepackage2.deje  vertical1.deje  vertical2.deje
